Fix: Remove whitespace on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,10 +16,11 @@ body {
 }
 
 header {
+    font-family: var(--title-font-family);
     position: relative;
     z-index: 2;
     height: 64px;
-    background-color: rgba(0,0,0,.5);
+    background-color: rgba(0,0,0,1);
     display: flex;
     align-items: center;
     box-shadow: none;
@@ -30,21 +31,18 @@ header {
     width: 100%;
     height: 100%;
     align-items: center;
+    margin-right: 12px;
+    
 }
 
 #nav_head {
     width: 100%;
     height: 100%;
     display: flex;
+    box-sizing: border-box;
     justify-content: space-between;
     justify-items: center;
     margin-left: 12px;
-}
-
-@media not (max-width: 950px) {
-    #nav_head {
-        display: none;
-    }
 }
 
 #nav_logo {
@@ -53,10 +51,10 @@ header {
 }
 
 #nav_menu {
+    box-sizing: border-box;
     display: block;
     border-radius: 100%;
     padding: 20px;
-    margin-right: 24px;
 }
 
 #nav_menu_img {
@@ -72,7 +70,7 @@ header {
 }
 
 #nav {
-    max-width: 950px;
+    max-width: 970px;
     height: 100%;
     box-sizing: border-box;
     display: flex;
@@ -81,7 +79,13 @@ header {
     margin: 0 auto;
 }
 
-@media (max-width: 950px) {
+@media not (max-width: 970px) {
+    #nav_head {
+        display: none;
+    }
+}
+
+@media (max-width: 970px) {
     #nav {
         display: none;
     }
